AC_INIT(SerPro.h)

m4_define([serpro_major_version], [3])
m4_define([serpro_minor_version], [0])
m4_define([serpro_micro_version], [0])
m4_define([serpro_version],
          [serpro_major_version.serpro_minor_version.serpro_micro_version])

AM_INIT_AUTOMAKE(SerPro,serpro_version)

SERPRO_MAJOR_VERSION=serpro_major_version
SERPRO_MINOR_VERSION=serpro_minor_version
SERPRO_MICRO_VERSION=serpro_micro_version
SERPRO_VERSION=serpro_version

m4_define([serpro_lt_release], [serpro_major_version.serpro_minor_version])

AC_SUBST(SERPRO_MAJOR_VERSION)
AC_SUBST(SERPRO_MINOR_VERSION)
AC_SUBST(SERPRO_MICRO_VERSION)
AC_SUBST(SERPRO_VERSION)

LT_RELEASE=serpro_minor_version
LT_CURRENT=serpro_major_version
LT_REVISION=serpro_micro_version

AC_SUBST(LT_RELEASE)
AC_SUBST(LT_CURRENT)
AC_SUBST(LT_REVISION)

AC_PROG_CXX
AC_PROG_LIBTOOL

PKG_CHECK_MODULES([glib],glib-2.0)
AC_CONFIG_FILES([Makefile serpro-3.0.pc serpro-glib-3.0.pc serpro-linux-3.0.pc])

AC_OUTPUT

